feat: allow navigating to food search from dashboard
Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/uebersicht.html
+++ b/uebersicht.html
@@ -14,6 +14,7 @@
     <load src="/partials/standardheader.html" pageTitle="Meine Listen" />
     <main id="pagemain">
       <h2>Ihre Einkaufslisten</h2>
+      <button id="gotoFoodSearch">Zur Lebensmittelsuche</button>
       <form id="new-list-form">
         <input
           name="listname"
