fix: resolve bad ordering of list elements on dashboard
Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/uebersicht.html
+++ b/uebersicht.html
@@ -32,12 +32,10 @@
         />
         <input name="listreset" type="reset" value="&olarr; Abbruch" />
       </form>
-      <ul class="shoppinglists open">
-        <h3>Offene Listen:</h3>
-      </ul>
-      <ul class="shoppinglists done">
-        <h3>Abgeschlossene Listen:</h3>
-      </ul>
+      <h3>Offene Listen:</h3>
+      <ul class="shoppinglists open"></ul>
+      <h3>Abgeschlossene Listen:</h3>
+      <ul class="shoppinglists done"></ul>
     </main>
   </body>
 </html>
