feat: add link to account registration on login page
It could already be accessed via the homepage, but having a more
obvious second path won't hurt.

Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/login.html
+++ b/login.html
@@ -27,6 +27,10 @@
             <div id="error">
             </div>
         </form>
+        <hr />
+        <p>
+            Haben Sie noch kein Konto? Dann können Sie sich <a href="/registration.html">hier registrieren.</a>
+        </p>
     </main>
 </body>
 
