feat: implement OpenID Connect login via id.jotoho.de
Using this, users registered on my personal Keycloak instance will be
able to reuse their credentials or use its WebAuthn support.

Closes: https://github.com/jotoho/Einkaufshelfer/issues/40
Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
 <html lang="de">
   <head>
-    <load src="partials/meta.html" />
+    <load src="/partials/meta.html" />
     <title>Einkaufsapp</title>
     <script type="module" src="/src/index.ts"></script>
     <link href="src/index.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body id="pageMain">
     <load
       src="/partials/standardheader.html"
       pageTitle="Willkommen zur Einkaufslistenverwaltung!"
