--- a/login.html
+++ b/login.html
@@ -28,6 +28,8 @@
             </div>
         </form>
         <hr />
+        <button id="buttonSSOLogin">Login mit Keycloak SSO</button>
+        <hr />
         <p>
             Haben Sie noch kein Konto? Dann können Sie sich <a href="/registration.html">hier registrieren.</a>
         </p>
