--- a/uebersicht.html
+++ b/uebersicht.html
@@ -5,7 +5,7 @@
 -->
 <html lang="de">
   <head>
-    <load src="partials/meta.html" />
+    <load src="/partials/meta.html" />
     <title>Ihre Einkaufslisten</title>
     <script type="module" src="src/dashboard.ts"></script>
     <link href="src/dashboard.css" type="text/css" rel="stylesheet" />
